padding changed for jumping bug

--- a/src/app/mainpage/contacts/contacts.component.scss
+++ b/src/app/mainpage/contacts/contacts.component.scss
@@ -125,11 +125,7 @@
     &.responsive-contact-open {
       display: flex;
       flex-direction: column;
-      padding: 3.5rem 2.75rem;
-
-      // @media(max-width: 767px) {
-      //   justify-content: center;
-      // }
+      padding: clamp(1.5rem, 4vw, 3rem);
     }
 
     .contact-container-heading {
@@ -277,6 +273,7 @@
     }
   }
 
+
   .responsive-options-btns-menu {
     display: none;
     flex-direction: column;
@@ -296,6 +293,9 @@
       justify-content: space-between;
       align-items: center;
       gap: 0.5rem;
+      &:hover {
+        cursor: pointer;
+      }
     }
 
     &.show {
